# kyber-1

./: Cargo.toml  build.rs  readme.md
.github/workflows/: cross.yml  kat.yml  no_std.yml
benches/: api.rs
examples/: ake.rs  kem.rs  uake.rs
pkg/: package.json  pqc_kyber.js  pqc_kyber_bg.wasm  readme.md
src/: api.rs  kem.rs  kex.rs  lib.rs
src/reference/: poly.rs  polyvec.rs
tests/: kem.rs  kex.rs  readme.md  run_all_tests.sh
tests/load/: mod.rs
www/: index.html  index.js  package.json  readme.md
