[package]
name = "safe_pqc_kyber"
version = "0.6.1"
authors = ["Bas Westerbaan <bas@westerbaan.name>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/bwesterb/argyle-kyber"
documentation = "https://docs.rs/crate/safe_pqc_kyber/"
categories = ["algorithms", "cryptography", "wasm", "no-std"]
description = "Fork of pqc_kyber with some safety fixes"
keywords = ["kyber", "kem", "key-exchange", "kex", "post-quantum"]
readme = "readme.md"

[dependencies]
rand_core = { version = "0.6.4",  default-features = false }
wasm-bindgen = { version = "0.2.84", optional = true }
getrandom = {version = "0.2.9", features = ["js"], optional = true }
zeroize = { version = "1.6.0", features = ["derive"], optional = true }
# Optional dev-deps, see https://github.com/rust-lang/cargo/issues/1596
criterion = { version = "0.4.0", features = ["html_reports"], optional = true } 

[dependencies.rand]
version = "0.8.5"
default-features = false
features = ["getrandom"]
optional = true

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "api"
harness = false

[features]
### Security Levels ###
# Defaults to "kyber768" if none selected
# Will throw a compile-time error if more than one level is chosen
kyber512 = []
kyber768 = [] 
kyber1024 = []

# For compiling to wasm targets 
wasm = ["wasm-bindgen", "getrandom", "rand"]

# Enable std library support
std = []

# For benchmarking
benchmarking = ["criterion"]

# Prevents leak sanitiser failing in tests
[profile.test]
opt-level = 2

[profile.test.package."*"]
opt-level = 0

[profile.test.build-override]
opt-level = 0
